# AsciiRenderer

./: .gitignore  .gitmodules  AsciiRender.sln  AsciiRender.vcxproj  AsciiRender.vcxproj.filters  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt  cpp.hint  vcpkg.json
.github/workflows/: cmake.yml  cross_platform_cmake.yml  macos_cmake.yml  unix_cmake.yml  windows_cmake.yml
ARLogViewer/: ARLogViewer.vcxproj  ARLogViewer.vcxproj.filters  CMakeLists.txt  LogFormatter.cpp  LogFormatter.h
ARLogViewer/src/: LogViewer.cpp  LogViewer.h  main.cpp
Examples/AsciirBanner/: CMakeLists.txt
Examples/AsciirBanner/src/: Banner.cpp
Examples/BasicInputExample/: CMakeLists.txt
Examples/BasicInputExample/src/: BasicInputExample.cpp  Executable.cpp
Examples/MouseInputExample/: CMakeLists.txt
Examples/MouseInputExample/src/: Executable.cpp
Examples/RendererExample/: CMakeLists.txt
Examples/RendererExample/src/: Executable.cpp
Examples/SuperAsciirBros/: CMakeLists.txt
Examples/SuperAsciirBros/include/: Background.h  GameLayer.h  Ground.h  Mario.h
Examples/SuperAsciirBros/resources/music/: SMBTHEME.flac
Examples/SuperAsciirBros/src/: Background.cpp  Game.cpp  GameLayer.cpp  Ground.cpp  Mario.cpp
Examples/TextureExample/: CMakeLists.txt
Examples/TextureExample/src/: Executable.cpp
Examples/TriangleExample/: CMakeLists.txt
Examples/TriangleExample/src/: Executable.cpp  TriangleExample.cpp
Prototyping/: CMakeLists.txt  Prototyping.vcxproj  Prototyping.vcxproj.filters
Prototyping/src/: Executable.cpp
docs/: CNAME  Reference.html  index.html
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000002_000010.html  dir_000003_000004.html  dir_000003_000008.html  dir_000003_000009.html  dir_000004_000006.html  dir_000004_000007.html  dir_000004_000008.html  dir_000004_000009.html  dir_000004_000010.html  dir_000004_000012.html  dir_000005_000006.html  dir_000005_000010.html  dir_000006_000004.html  dir_000006_000007.html  dir_000006_000008.html  dir_000006_000009.html  dir_000007_000004.html  dir_000007_000006.html  dir_000007_000008.html  dir_000007_000009.html  dir_000007_000010.html  dir_000008_000004.html  dir_000008_000010.html  dir_000009_000004.html  dir_000009_000007.html  dir_000009_000008.html  dir_000009_000010.html  dir_000009_000011.html  dir_000010_000002.html  dir_000011_000004.html  dir_000011_000006.html  dir_000011_000007.html  dir_000011_000008.html  dir_000011_000010.html  dir_000011_000012.html  dir_000012_000004.html  dir_000012_000008.html  (+364 more)
docs/html/d0/d02/: class_asciir_1_1_shader2_d.html  class_asciir_1_1_shader2_d.js
docs/html/d0/d06/: _lines_8cpp.html
docs/html/d0/d22/: class_log_term.html  class_log_term.js
docs/html/d0/d27/: class_asciir_1_1_line_segment-members.html
docs/html/d0/d28/: struct_asciir_1_1is__vertices__type_3_01_t_storage_00_01d__storage_00_01_t_arr_3_01_t_storage_00_01d__storage_01_4_01_4-members.html
docs/html/d0/d2b/: arpch_8h.html  arpch_8h.js  arpch_8h_source.html
docs/html/d0/d2e/: _maths_8h.html  _maths_8h.js  _maths_8h_source.html
docs/html/d0/d37/: class_asciir_1_1_ascii_attr__inherit__graph.map  class_asciir_1_1_ascii_attr__inherit__graph.md5
docs/html/d0/d3b/: _asciir_literals_8cpp.html  _asciir_literals_8cpp.js
docs/html/d0/d42/: _application_8cpp.html  _application_8cpp.js
docs/html/d0/d45/: _matrix_8h.html  _matrix_8h.js  _matrix_8h_source.html
docs/html/d0/d50/: struct_asciir_1_1ar_vert_base__coll__graph.map  struct_asciir_1_1ar_vert_base__coll__graph.md5
docs/html/d2/da1/: _mesh_8h.js  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+122 more)
modules/WinInputHooks/: WinInputHooks.def  WinInputHooks.vcxproj  WinInputHooks.vcxproj.filters
profiles/: windows_profile
props/: boost_x64_debug.props
scripts/: ArtToCart.py  ConanInstall.cmake  log_view.bat  log_view_x64.bat  log_view_x86.bat  texture.art
scripts/TextureEditor/: ColorPicker.py  Palette.py  SymbolPicker.py  TextureEditor.py  Toolbar.py  requirements.txt
src/: Asciir.h  AsciirHeaders.h
src/Asciir/: Application.cpp  Application.h  Core.h  EntryPoint.h  Terminal.h
src/Asciir/Audio/: Audio.cpp  Audio.h
src/Asciir/Core/: Application.cpp  Application.h  AsciirLiterals.cpp  AsciirLiterals.h  Core.h  Engine.cpp  Engine.h  EntryPoint.cpp  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MacroArguments.h  Terminal.cpp  Terminal.h  Timing.cpp  Timing.h
src/Asciir/Entities/: Components.h  ECS.cpp  ECS.h  ECS.ipp  Systems.cpp  Systems.h
src/Asciir/Event/: Event.h  KeyEvent.h  MouseEvent.h  TerminalEvent.h  TerminalEventHandler.cpp  TerminalEventHandler.h
src/Asciir/Input/: EventListener.h  Input.cpp  Input.h  KeyCodes.h
src/Asciir/Logging/: ErrLog.ipp  FileLog.cpp  FileLog.h  FileLog.ipp  Log.cpp  Log.h  Log.ipp
src/Asciir/Math/: Lines.cpp  Lines.h  Lines.ipp  Math.cpp  Math.h  Matrix.h  Matrix.ipp  Tensor.h  Tensor.ipp  Vector.h  Vector.ipp  Vertices.h  Vertices.ipp
src/Asciir/Maths/: Lines.cpp  Lines.h  Lines.ipp  Maths.cpp  Maths.h  Matrix.h  Matrix.ipp  Tensor.h  Tensor.ipp  Vector.h  Vector.ipp  Vertices.h  Vertices.ipp
src/Asciir/Platform/: PlatformMacros.h
src/Asciir/Rendering/: AsciiAttributes.cpp  AsciiAttributes.h  FileTexture.cpp  FileTexture.h  Lines.cpp  Lines.h  Matrix.h  Matrix.ipp  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  RenderConsts.h  Renderer.cpp  Renderer.h  Renderer.ipp  Shader.cpp  Shader.h  TerminalRender.cpp  TerminalRender.h  TerminalRenderer.cpp  TerminalRenderer.h  Texture.cpp  Texture.h  Texture.ipp  Vertices.cpp  Vertices.h  Vertices.ipp
src/Asciir/Tools/: ProfileLayer.cpp  ProfileLayer.h
src/pch/: arpch.cpp  arpch.h
(+690 files in other folders)
